[project]
name = "vulcan-book"
version = "0.1.0"
requires-python = ">= 3.9"  # Documentation project - more flexible than main project
dependencies = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.8",
    "mkdocs-mermaid2-plugin>=1.1.1",
    "mkdocs-include-markdown-plugin>=6.0.6",
    "mkdocs-glightbox>=0.3.7",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

